--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "rslug"
+name = "rworm"
 version = "0.1.0"
 authors = ["Jake Armendariz <jakearmendariz99@gmail.com>"]
 edition = "2018"
