--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,6 @@ pest_derive = "2.0"
 lazy_static = "1.4.0"
 log = "0.4"
 pretty_env_logger = "0.4.0"
+serde = { version = "1.0", features = ["derive"] }
+bincode = "1.3.3"
+serde_json = "1.0.64"
