--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-pest = "2.0"
+pest = "*"
 pest_derive = "2.0"
 lazy_static = "1.4.0"
 serde = { version = "1.0", features = ["derive"] }
